# node-prune

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prunerc  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs
.github/workflows/: rust.yml
ci/: before_deploy.sh  build_deb.sh  install.sh  script.sh  sha256.sh  test_complete.sh  utils.sh
src/: lib.rs
tests/: cli.rs
