[package]
name = "node-prune"
version = "0.0.1"
authors = ["Jaye Lee <lidongjies@gmail.com>"]
license = "MIT"
description = "Remove unnecessary files from node_modules"
readme = "README.md"
homepage = "https://github.com/makeco/node-prune"
repository = "https://github.com/makeco/node-prune"
keyword = ["cli", "node", "node_modules", "node-prune"]
categories = ["command-line-utilities"]
default-run = "node-prune"
edition = "2018"

[dependencies]
walkdir = "2.2.9"
structopt = "0.3.7"
log = "0.4.8"
atty = "0.2.14"
serde_json = "1.0"
serde = { version = "1.0.123", features = ["derive"] }
failure = "0.1.6"
exitfailure = "0.5.1"
async-std = "1.4.0"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "2.0.0"

[lib]
name = "node_prune"
doctest = false
path = "src/lib.rs"

[[bin]]
name = "node-prune"
path = "src/bin/node-prune.rs"
